Finish features section, add new about section, change hero and topheader style, create new button component

--- a/PhoneRepair1/src/App.css
+++ b/PhoneRepair1/src/App.css
@@ -4,7 +4,7 @@
   --thm-primary-color: #000;
   --thm-background: #fff;
   --thm-secondary-background: #f3f5ff;
-  --thm-secondary-color: #282925;
+  --thm-secondary-color: #aeadb3;
   --thm-font: "Poppins", sans-serif;
 }
 
