--- a/PhoneRepair1/src/App.css
+++ b/PhoneRepair1/src/App.css
@@ -8,6 +8,17 @@
   --thm-font: "Poppins", sans-serif;
 }
 
+.slick-slide > div {
+  margin: 0 50px;
+}
+.slick-list {
+  margin: 0 -50px;
+}
+
+.slick-dots li.slick-active button {
+  background-color: blue;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
